# marketing-data-import

./: .gitignore  Dockerfile  Makefile  README.md  device_list.json  pom.xml  pyproject.toml
dags/: marketing_import_dags.py
scr/test/java/com/flaregames/imports/applovin/: ApplovinResponseTest.java  ImportLogServiceMock.java
scr/test/java/com/flaregames/imports/config/: TestingConflet.java
scr/test/java/com/flaregames/imports/currency/: CurrencyDaoIntegrationTest.java  CurrencyDaoMock.java  CurrencyRecordTest.java  CurrencyServiceTest.java
scr/test/java/com/flaregames/imports/facebook/: FacebookImportIntegrationTest.java  RequestWrapperMock.java  RetryRequestWrapperTest.java
scr/test/java/com/flaregames/imports/importlog/: ImportLogDaoIntegrationTest.java  ImportLogDaoMock.java  ImportLogEntryTest.java  ImportLogServiceTest.java  MissingListElementFinderTest.java  TransactionDaoIntegrationTest.java  TransactionDaoMock.java
scr/test/java/com/flaregames/imports/integration/: AbstractIntegrationTest.java  IntegrationTestModule.java  TestDao.java
scr/test/java/com/flaregames/microservice/: SystemTimeRule.java
scr/test/resources/: af_dl2_response.csv  af_test_events.csv  asa_hourly_keywords_by_country.json
scr/test/resources/fixtures/applovin/: applovin_historical.json
scr/test/resources/fixtures/currency/: currencylayer_historical.json
scr/test/resources/fixtures/facebook/: facebook_historical_adset.json  facebook_historical_campaign.json  facebook_historical_campaign_adset.json  facebook_historical_insight.json
tools/: AF-ImportColumns.ods
(+24 files in other folders)
